# spocks-brain

./: .gitignore  README.md
spocks_brain_fw/: Cargo.toml  build_uf2.sh
spocks_brain_fw/.cargo/: config.toml
spocks_brain_fw/src/: main.rs
spocks_brain_fw/src/app/: events.rs  gnss_parse.rs  gnss_state.rs  lcd_gnss.rs  mod.rs
spocks_brain_fw/src/debug/: mod.rs  usb_log.rs
spocks_brain_fw/src/platform/: clocks.rs  constants.rs  gpio.rs  i2c.rs  lcd_hd44780_i2c.rs  mod.rs  resets.rs  timers.rs  uart.rs
