[package]
edition = "2021"
name = "spocks_brain_fw"
version = "0.1.0"
license = "MIT"

[features]
default = []
usb-log = ["usb-device", "usbd-serial"]

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "1.0.0" }

panic-halt = "0.2"

# `rp2040-e5` enables the USB device erratum workaround in rp2040-hal (needed on B0/B1 silicon).
rp-pico = { version = "0.9", features = ["rp2040-e5"] }

heapless = "0.8"

usb-device = { version = "0.3", optional = true }
usbd-serial = { version = "0.2", optional = true }

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false
